# niuton-aurora

./: .gitignore  CMakeLists.txt  README.md  aichat-config.yaml  aurora-all.md  aurora-bash-functions.sh  aurora-safe.md  aurora-search.service  aurora-serve.service  install.sh  memory.md.example  setup-assets.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: WebSearch.js  main.qml
package/contents/ui/config/: ConfigAdvanced.qml  ConfigGeneral.qml  ConfigModels.qml  ConfigTools.qml  ConfigVoice.qml
scripts/: aurora-transcribe
src/app/: CMakeLists.txt  main.cpp  net.niuton.aurora.desktop
src/app/qml/: Main.qml
src/core/: CMakeLists.txt
src/core/autotests/: test_configstore.cpp  test_conversationstore.cpp  test_fileio.cpp  test_http.cpp  test_ndjsonstream.cpp  test_processrunner.cpp  testhttpserver.h
src/core/src/: configstore.cpp  configstore.h  conversationstore.cpp  conversationstore.h  fileio.cpp  fileio.h  http.cpp  http.h  ndjsonstream.cpp  ndjsonstream.h  processrunner.cpp  processrunner.h  utf8trim.h
src/engine/: CMakeLists.txt
src/engine/autotests/: tst_auroracontroller.qml  tst_auroraengine.qml  tst_auroraengine_knowledge.qml  tst_aurorasettings.qml  tst_chatcontroller_activity.qml  tst_chatcontroller_compaction.qml  tst_chatcontroller_confirm.qml  tst_chatcontroller_embed.qml  tst_chatcontroller_rag.qml  tst_chatcontroller_rating.qml  tst_chatcontroller_stop.qml  tst_chatcontroller_stream.qml  tst_chatcontroller_tools.qml  tst_comfyclient.qml  tst_commands.qml  tst_contextcompactor.qml  tst_conversationexport.qml  tst_modelmanager.qml  tst_ollamaclient_chat.qml  tst_ollamaclient_embed.qml  tst_ollamaclient_models.qml  tst_permission.qml  tst_promptbuilder.qml  tst_tool.qml  tst_toolregistry.qml  tst_tools_fileio.qml  tst_tools_generate.qml  tst_tools_netproc.qml
src/engine/qml/: AuroraController.qml  AuroraEngine.qml  AuroraSettings.qml  CategoryPolicy.qml  ChatController.qml  ChatJob.qml  ComfyClient.qml  Commands.js  ContextCompactor.js  ConversationExport.js  GrantStore.qml  ModelManager.qml  OllamaClient.qml  PermissionResolver.qml  PromptBuilder.js  Speaker.qml  Tool.qml  ToolRegistry.qml  VoiceRecorder.qml
src/engine/qml/tools/: GenerateImageTool.qml  ListDirectoryTool.qml  ReadFileTool.qml  RunCommandTool.qml  WebFetchTool.qml  WebSearchTool.qml  WriteFileTool.qml
src/engine/workflows/: flux2_dev.json  z_image.json  z_image_turbo.json
src/ui/: CMakeLists.txt
src/ui/autotests/: tst_knowledgeview.qml  tst_messagebubble.qml  tst_modeltuner.qml  tst_theme.qml
src/ui/qml/: ChatInput.qml  ChatView.qml  Header.qml  ImagePanel.qml  KnowledgeView.qml  MainView.qml  MessageBubble.qml  ModelTuner.qml  Sidebar.qml  Theme.qml
